added instructions to HTML for user

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>SNAKE</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="housing">
+      <div id="app"></div>
+
+      <p>Use the directional keys or "WASD" to move the snake!</p>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
